<resources>
    <string name="app_name">IPU Notes</string>
    <string name="close">close</string>
    <string name="open">open</string>


    <string name="userInterface">User Interface</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="themeKey">theme</string>
    <string name="languageKey">language</string>
    <string name="invalidNumber">Invalid Number</string>
    <string name="addSubject">Add Subject</string>
    <string name="done">Done</string>

</resources>
